--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,11 @@
             <ul class="list portfolio-list">
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
+                        <div class="overlay-container">
                     <img class="portfolio-img" src="./image/project-1.jpg" alt="Технокряк" width="370" height="294">
+                    <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Технокряк</h2>
                         <p class="portfolio-category">Веб-сайт</p>
