--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
             <h2 class="about-caption">Чем мы занимаемся</h2>
             <ul class="list about-list">
                 <li class="about-list-item"><img class="about-img" src="./image/work-tablet.jpg" alt="Работает на планшете" width="370" height="294">
+                <p class="about-overlay">Десктопные приложения</p>
                 </li>
                 <li class="about-list-item"><img class="about-img" src="./image/work-web-design.jpg" alt="Дизайнер за работой" width="370" height="294">
+                <p class="about-overlay">Мобильные приложения</p>
                 </li>
                 <li class="about-list-item"><img class="about-img" src="image/work-color.jpg" alt="Палитра на планшете" width="370" height="294">
+                <p class="about-overlay">Дизайнерские решения</p>
                 </li>
             </ul>
             </div>
