--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                         <div class="overlay-container">
                     <img class="portfolio-img" src="./image/project-1.jpg" alt="Технокряк" width="370" height="294">
                     <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat nulla quo ratione placeat cupiditate minus quis sit ipsam optio, itaque ad amet! Dolore impedit a doloremque aliquam rem temporibus officiis!</p>
                     </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Технокряк</h2>
