--- a/portfolio.html
+++ b/portfolio.html
@@ -68,8 +68,7 @@
                     <a href="" class="portfolio-link link">
                         <div class="overlay-container">
                     <img class="portfolio-img" src="./image/project-1.jpg" alt="Технокряк" width="370" height="294">
-                    <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                     </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Технокряк</h2>
@@ -78,15 +77,21 @@
                 </li>
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-2.jpg" alt="Постер" width="370" height="294">
+                        <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-2.jpg" alt="Постер" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Постер New Orlean vs Golden Star</h2>
                         <p class="portfolio-category">Дизайн</p>
                     </div></a>
                 </li>
                 <li class="portfolio-list-item">
-                    <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-3.jpg" alt="Ресторан" width="370" height="294">
+                <a href="" class="portfolio-link link">
+                    <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-3.jpg" alt="Постер" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Ресторан Seafood</h2>
                         <p class="portfolio-category">Приложение</p>
@@ -94,7 +99,10 @@
                 </li>
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-4.jpg" alt="Проект" width="370" height="294">
+                    <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-4.jpg" alt="Постер" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Проект Prime</h2>
                         <p class="portfolio-category">Маркетинг</p>
@@ -102,7 +110,10 @@
                 </li>
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-5.jpg" alt="Проект" width="370" height="294">
+                    <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-5.jpg" alt="Постер" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Проект Boxes</h2>
                         <p class="portfolio-category">Приложение</p>
@@ -110,7 +121,10 @@
                 </li>
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-6.jpg" alt="Веб-сайт" width="370" height="294">
+                    <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-6.jpg" alt="Веб-сайт" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Inspiration has no Borders</h2>
                         <p class="portfolio-category">Веб-сайт</p>
@@ -118,7 +132,10 @@
                 </li>
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-7.jpg" alt="Дизайн" width="370" height="294">
+                    <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-7.jpg" alt="Дизайн" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Издание Limited Edition</h2>
                         <p class="portfolio-category">Дизайн</p>
@@ -126,7 +143,10 @@
                 </li>
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-8.jpg" alt="Проект" width="370" height="294">
+                    <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-8.jpg" alt="Постер" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Проект LAB</h2>
                         <p class="portfolio-category">Маркетинг</p>
@@ -134,7 +154,10 @@
                 </li>
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
-                    <img class="portfolio-img" src="./image/project-9.jpg" alt="Приложение" width="370" height="294">
+                    <div class="overlay-container">
+                        <img class="portfolio-img" src="./image/project-9.jpg" alt="Постер" width="370" height="294">
+                        <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
                     <div class="portfolio-text-box">
                         <h2 class="portfolio-caption">Growing Business</h2>
                         <p class="portfolio-category">Приложение</p>
