--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
                 <li class="portfolio-list-item">
                 <a href="" class="portfolio-link link">
                     <div class="overlay-container">
-                        <img class="portfolio-img" src="./image/project-3.jpg" alt="Постер" width="370" height="294">
+                        <img class="portfolio-img" src="./image/project-3.jpg" alt="Приложение" width="370" height="294">
                         <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                     </div>
                     <div class="portfolio-text-box">
@@ -100,7 +100,7 @@
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
                     <div class="overlay-container">
-                        <img class="portfolio-img" src="./image/project-4.jpg" alt="Постер" width="370" height="294">
+                        <img class="portfolio-img" src="./image/project-4.jpg" alt="Маркетинг" width="370" height="294">
                         <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                     </div>
                     <div class="portfolio-text-box">
@@ -111,7 +111,7 @@
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
                     <div class="overlay-container">
-                        <img class="portfolio-img" src="./image/project-5.jpg" alt="Постер" width="370" height="294">
+                        <img class="portfolio-img" src="./image/project-5.jpg" alt="Приложение" width="370" height="294">
                         <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                     </div>
                     <div class="portfolio-text-box">
@@ -155,7 +155,7 @@
                 <li class="portfolio-list-item">
                     <a href="" class="portfolio-link link">
                     <div class="overlay-container">
-                        <img class="portfolio-img" src="./image/project-9.jpg" alt="Постер" width="370" height="294">
+                        <img class="portfolio-img" src="./image/project-9.jpg" alt="Приложение" width="370" height="294">
                         <p class="overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                     </div>
                     <div class="portfolio-text-box">
